# crowdstrike-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  client.py  crowdstrike_mcp_server.py  pyproject.toml  registry.py  requirements-dev.txt  requirements.txt  response_store.py  ruff.toml  server.py  utils.py
.claude/: permissions-full.json  permissions-minimal.json  permissions-standard.json  settings.json
.github/workflows/: ci.yml  release.yml
common/: api_scopes.py  auth_middleware.py  errors.py  health.py  session_auth.py
docs/FRs/: 01-identity-protection.md  02-spotlight-vulnerabilities.md  03-rtr-read-only.md  04-falconx-sandbox.md  05-intel-and-indicator-graph.md  06-threat-graph.md  (+3 more)
modules/: alerts.py  base.py  cao_hunting.py  case_management.py  cloud_registration.py  cloud_security.py  correlation.py  endpoint.py  hosts.py  ngsiem.py  response.py  response_store.py  spotlight.py
resources/: fql_guides.py
tests/: conftest.py  test_alerts_endpoint_enrichment.py  test_cao_hunting.py  test_case_management_new_tools.py  test_cloud_timeline.py  test_correlation_import.py  test_correlation_templates.py  test_endpoint_deprecation.py  test_endpoint_removed.py  test_format_text_response_footer.py  test_get_stored_response.py  test_get_stored_response_silent_nulls.py  test_idp.py  test_ngsiem_reads.py  test_ngsiem_timeout_fix.py  test_parse_composite_id.py  test_response_module.py  test_rtr.py  test_smoke_tools_list.py  test_spotlight.py  test_threatgraph.py  test_tool_permissions.py  test_triggering_record_mapping.py  test_version.py
(+53 files in other folders)
